--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 <div class="hero">
     <div class="hero__inner">
         <div class="hero__title">Долго, дорого, богато!</div>
+        <button class="hero__btn">каталог изделий</button>
     </div>
 
 </div>
