--- a/index.html
+++ b/index.html
@@ -7,28 +7,42 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@700&display=swap" rel="stylesheet">    
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">    
-
+    <link rel="stylesheet" href="css/style.css">  
+    
 </head>
 <body>
 
 <header class="header">
     <div class="container">
         <div class="header__inner">
-            <div class="nav">
-                <ul class="nav__list">
-                    <li class="nav__link"><a href="#">Контрагентам</a></li>
-                    <li class="nav__link"><a href="#">Дизайнерам</a></li>
-                    <li class="nav__link"><a href="#">Вакансии</a></li>
-                </ul>
+
+            <div class="header__item">
+                <div class="nav">
+                    <ul class="nav__list">
+                       <li class="nav__item">Контрагентам</li>
+                       <li class="nav__item">Дизайнерам</li>
+                       <li class="nav__item">Вакансии</li>
+                    </ul>
+                </div>
             </div>
-            <div class="nav__logo"><img src="img/OJJO.svg" alt=""></div>
-            <div class="nav__menu">
-                <button class="nav__menu-btn">Поиск</button>
-                <button class="nav__menu-btn">Вход/Регистрация</button>
-                <button class="nav__menu-btn">Us</button>
-                <button class="nav__menu-btn">Lk</button>
+
+            <div class="header__item">
+                <div class="logo"><img src="img/OJJO.svg" alt=""></div>
             </div>
+
+            <div class="header__item">
+                <div class="nav">
+                    <ul class="nav__list"></ul>
+                       <li class="nav__item">Поиск</li>
+                       <li class="nav__item">Вход/Регистрация</li>
+                       <li class="nav__item">AC</li>
+                       <li class="nav__item">LK</li>
+                    </ul>
+                </div>
+            </div>
+
+            
+
         </div>
     </div>
 </header>
